# apiserver/api_configuration.go
@@ -1,0 +1,124 @@
+/*
+ * Hailo app API
+ *
+ * API to access and configure the Hailo app
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apiserver
+
+import (
+	"net/http"
+	"strings"
+
+	"github.com/gorilla/mux"
+)
+
+// ConfigurationApiController binds http requests to an api service and writes the service results to the http response
+type ConfigurationApiController struct {
+	service      ConfigurationApiServicer
+	errorHandler ErrorHandler
+}
+
+// ConfigurationApiOption for how the controller is set up.
+type ConfigurationApiOption func(*ConfigurationApiController)
+
+// WithConfigurationApiErrorHandler inject ErrorHandler into controller
+func WithConfigurationApiErrorHandler(h ErrorHandler) ConfigurationApiOption {
+	return func(c *ConfigurationApiController) {
+		c.errorHandler = h
+	}
+}
+
+// NewConfigurationApiController creates a default api controller
+func NewConfigurationApiController(s ConfigurationApiServicer, opts ...ConfigurationApiOption) Router {
+	controller := &ConfigurationApiController{
+		service:      s,
+		errorHandler: DefaultErrorHandler,
+	}
+
+	for _, opt := range opts {
+		opt(controller)
+	}
+
+	return controller
+}
+
+// Routes returns all the api routes for the ConfigurationApiController
+func (c *ConfigurationApiController) Routes() Routes {
+	return Routes{
+		{
+			"GetConfiguration",
+			strings.ToUpper("Get"),
+			"/v1/config/{config-id}",
+			c.GetConfiguration,
+		},
+		{
+			"GetConfigurations",
+			strings.ToUpper("Get"),
+			"/v1/config",
+			c.GetConfigurations,
+		},
+		{
+			"PutConfiguration",
+			strings.ToUpper("Put"),
+			"/v1/config/{config-id}",
+			c.PutConfiguration,
+		},
+	}
+}
+
+// GetConfiguration - Get FDS endpoint
+func (c *ConfigurationApiController) GetConfiguration(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	configIdParam, err := parseInt32Parameter(params["config-id"], true)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+
+	result, err := c.service.GetConfiguration(r.Context(), configIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// GetConfigurations - Get all FDS endpoints
+func (c *ConfigurationApiController) GetConfigurations(w http.ResponseWriter, r *http.Request) {
+	result, err := c.service.GetConfigurations(r.Context())
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
+
+// PutConfiguration - Creates or update an FDS endpoint
+func (c *ConfigurationApiController) PutConfiguration(w http.ResponseWriter, r *http.Request) {
+	params := mux.Vars(r)
+	configIdParam, err := parseInt32Parameter(params["config-id"], true)
+	if err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+
+	result, err := c.service.PutConfiguration(r.Context(), configIdParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+
+}
